# pythonAnalyzer

./: pyproject.toml
sqllite/: go_crm.sqlite
week 2/voorbeeld unsupervised/: Script_W9_1.ipynb
week 2/wc llm/: classificationmodel.ipynb  regressionllm.ipynb  tensorflow.ipynb
week 2/wc unsupervised/: frequentItemSets.ipynb  unsupervised.ipynb  unsupervised_aiken.ipynb  unsupervised_mall.ipynb
week 2/wc1/: Practicum_2.1_Opdrachten.ipynb  Script.ipynb
week 2/wc2/: Practicum_2.2_Opdrachten.ipynb  Practicum_2.3_Opdrachten.ipynb  data_structures.ipynb  data_structures_02.ipynb  data_structures_03.ipynb  playing_with_pandas.ipynb  sorting_algorithms.ipynb
week 2/wc4/: tabellenVullen.ipynb
